Fixed spacing issue in test player

--- a/src/components/HtmlViewer/style.css
+++ b/src/components/HtmlViewer/style.css
@@ -1,34 +1,3 @@
-
-
-.html-viewer table {
-    border-collapse: collapse !important; /* Ensures that the border is collapsed into a single border */
-    width: 100%  !important; /* Sets the table width to fill the container */
-    border: 1px solid black  !important; /* Sets the border color and width */
-}
-
-.html-viewer th,.html-viewer  td {
-    border: 1px solid #e1e1e1  !important; /* Sets the border for table headers and cells */
-    text-align: left  !important; /* Aligns the text to the left */
-    padding: 8px  !important; /* Adds padding inside the cells */
-}
-
-.html-viewer th {
-    background-color: #f2f2f2  !important; /* Sets a background color for the header cells */
-}
-
-.html-viewer figure{
-    margin: 0;
-    padding-bottom:10;
-}
-
-.html-viewer figure img{
-    width: auto !important; /* Fixed width for the image */
-    max-width: 100% !important; /* Ensures the image width doesn't exceed the container width */
-    height: auto; /* Maintains the aspect ratio */
-  }
-
-
-  .html-viewer  .ck.ck-editor__editable_inline {
-    border: 0 !important;
-    /* border-top: 0; */
+.html-viewer div.ant-typography {
+    margin-bottom: 0;
 }
